# temperley_lieb_cat

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: digits.rs  fraction.rs  gcd.rs  jones_wenzl.rs  lib.rs  macros.rs  main.rs  poly.rs  possibly_pointed_ring.rs  serial.rs  structures.rs  temperley.rs  temperley_diagram.rs  temperley_link.rs  temperley_site.rs  tex.rs
tests/: jw3_over2.rs  jw_serialise.rs  manual_jw3.rs  two_jw_semisimple_poly.rs
