[package]
name = "temperley_lieb_cat"
version = "0.1.0"
authors = ["Robert Spencer <general@robertandrewspencer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.3"
partitions = "0.2.4"

[profile.release]
debug = true
opt-level = 2
