[package]
name = "temperley_lieb_cat"
version = "0.0.1"
authors = ["Robert Spencer <general@robertandrewspencer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.3"
partitions = "0.2.4"

[profile.release]
debug = true
opt-level = 2

[[bin]]
name = "main"
path = "src/main.rs"

[lib]
name = "temperley_lieb_cat"
path = "src/lib.rs"
