[package]
name = "temperley_lieb_cat"
version = "0.0.3"
authors = ["Robert Spencer <general@robertandrewspencer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
partitions = "0.2.4"
which = "4.0.2"
itertools = "0.10.0"
lazy_static = "1.4.0"

[profile.release]
debug = true
opt-level = 3

[[bin]]
name = "main"
path = "src/main.rs"

[lib]
name = "temperley_lieb_cat"
path = "src/lib.rs"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", ".doc/katex-header.html" ]
